<resources>
    <string name="app_name">test</string>
    <string name="search_title">검색</string>
    <string name="recent_keyword">최근 검색어</string>
    <string name="remove_keyword">비우기</string>
	<string name="search_hint">검색어를 입력하세요.</string>
	<string name="not_found_search_items">검색 결과를 찾을 수 없습니다. :(</string>
	<string name="detail_link">링크이동</string>
	<string name="error_api">일시적으로 데이터를 읽을 수 없습니다.\n다시 시도해주세요.</string>
	<string name="error_image">해당 이미지를 불러 올 수 없습니다. \n다시 시도해주세요.</string>
</resources>
