<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:tools="http://schemas.android.com/tools"
		xmlns:app="http://schemas.android.com/apk/res-auto">

	<data>

		<import type="android.view.View"/>

		<variable
				name="vm"
				type="com.lezhin.test.ui.main.MainViewModel"/>
	</data>

	<android.support.design.widget.CoordinatorLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent">

		<android.support.design.widget.AppBarLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content">

			<android.support.v7.widget.Toolbar
					android:id="@+id/toolbar"
					android:layout_width="match_parent"
					android:layout_height="?attr/actionBarSize"
					android:background="?attr/colorPrimary"
					android:theme="@style/AppTheme">

				<TextView
						android:layout_height="wrap_content"
						android:layout_width="wrap_content"
						android:text="@string/app_name"
						android:textSize="16sp"
						android:textColor="@color/white"
						android:layout_gravity="left"/>

				<android.support.v7.widget.SearchView
						android:id="@+id/searchView"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_centerHorizontal="true"
						android:layout_gravity="right"
						android:iconifiedByDefault="false"
						android:queryHint="@string/search_title"/>

			</android.support.v7.widget.Toolbar>
		</android.support.design.widget.AppBarLayout>

		<android.support.constraint.ConstraintLayout
				android:layout_width="match_parent"
				app:layout_behavior="@string/appbar_scrolling_view_behavior"
				android:layout_height="match_parent"
				android:orientation="vertical"
				tools:context=".ui.main.MainActivity">

			<TextView
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="8dp"
					android:text="@string/not_found_search_items"
					android:textSize="14sp"
					android:visibility="@{vm.isEmptyData ? View.VISIBLE : View.GONE}"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"/>

			<android.support.v4.widget.ContentLoadingProgressBar
					android:id="@+id/progress_detail"
					style="?android:attr/progressBarStyleLarge"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:visibility="@{vm.isLoading ? View.VISIBLE : View.GONE}"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent"/>

			<android.support.v7.widget.RecyclerView
					android:id="@+id/rv_images"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"/>

		</android.support.constraint.ConstraintLayout>


	</android.support.design.widget.CoordinatorLayout>
</layout>
